Update API key in index.html
Replaced placeholder API key with actual API key.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <script>
 (function() {
   // --- TU WKLEJ KLUCZ API ---
-  const API_KEY = "TU_WKLEJ_SWOJ_KLUCZ_API"; 
+  const API_KEY = "AIzaSyC0Ha5dzQGexMLgErPBSVWfz6QnG4ipA-Y"; 
   
   // BAZA WIEDZY ANI (WERSJA PEŁNA EBM + VR)
   const SYSTEM_INSTRUCTION = `
