Replace API key placeholder in index.html

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
 <script>
 (function() {
-  // --- TU WKLEJ KLUCZ API ---
-  const API_KEY = "AIzaSyC0Ha5dzQGexMLgErPBSVWfz6QnG4ipA-Y"; 
+  // --- TU WKLEJ SWÓJ KLUCZ API ---
+  const API_KEY = "TU_WKLEJ_SWOJ_KLUCZ_API"; 
   
   // BAZA WIEDZY ANI (WERSJA PEŁNA EBM + VR)
   const SYSTEM_INSTRUCTION = `
