--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Lexend:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+     <!-- Google Analytics 4 -->
+     <script async src="https://www.googletagmanager.com/gtag/js?id=G-56VR40VHHV"></script>
+     <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-56VR40VHHV');
+          </script>
 
     <script type="application/ld+json">
     {
