--- a/kiszlo.html
+++ b/kiszlo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- SEO & AI Optimization -->
-    <title>Karol Kiszło | Head of NeuroPerformance & Coach | NCNI Wrocław</title>
+    <title>Karol Kiszło | Head of NeuroPerformance & Coach Prezes Zarządu | NCNI Wrocław</title>
     <meta name="description" content="Profil eksperta: Karol Kiszło. Strateg wydajności, trener odporności psychicznej i coach personalny. Łączy świat biznesu z neurobiologią w NCNI.">
     <meta name="keywords" content="Karol Kiszło, NeuroPerformance, Coaching Wrocław, Trener mentalny, Strategia biznesowa, Odporność psychiczna, NCNI">
     <link rel="canonical" href="https://ncni.pl/kiszlo.html">
