--- a/oferta.html
+++ b/oferta.html
@@ -8,6 +8,14 @@
     <link rel="icon" href="logo.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Lexend:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+     <!-- GA4 -->
+ <script async src="https://www.googletagmanager.com/gtag/js?id=G-56VR40VHHV"></script>
+ <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-56VR40VHHV');
+ </script>
 
     <style>
         :root {
