--- a/dysleksja.html
+++ b/dysleksja.html
@@ -18,6 +18,7 @@
 
     <!-- Libraries (Three.js for particles) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+<!-- GA4 --><script async src="https://www.googletagmanager.com/gtag/js?id=G-56VR40VHHV"></script><script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-56VR40VHHV');</script>
 
     <!-- Schema.org -->
     <script type="application/ld+json">
