--- a/dcd.html
+++ b/dcd.html
@@ -7,6 +7,7 @@
     <!-- SEO & AI Optimization -->
     <title>Dyspraksja (DCD) - Terapia Koordynacji Ruchowej | NCNI Wrocław</title>
     <meta name="description" content="Terapia dyspraksji (DCD) we Wrocławiu. Wsparcie koordynacji ruchowej, fizjoterapia, integracja sensoryczna (SI) i treningi w wirtualnej rzeczywistości.">
+<!-- GA4 --><script async src="https://www.googletagmanager.com/gtag/js?id=G-56VR40VHHV"></script><script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-56VR40VHHV');</script>
     <meta name="keywords" content="Dyspraksja Wrocław, DCD terapia, Koordynacja ruchowa, Integracja Sensoryczna Wrocław, Fizjoterapia dziecięca, NCNI, Terapia VR">
     <link rel="canonical" href="https://ncni.pl/dcd.html">
     <link rel="icon" href="logo.png" type="image/png">
