Fix GA4 ID - use correct Measurement ID G-56VR40VHHV

--- a/szablon-profil.html
+++ b/szablon-profil.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TWÓJ_ID_GA4"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-TWÓJ_ID_GA4');
-    </script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-56VR40VHHV"></script>
+ <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-56VR40VHHV');
+      </script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
