--- a/index.html
+++ b/index.html
@@ -588,8 +588,8 @@
                 </a>
 
                 <a href="szablon-profil.html" class="team-card glass cursor-trigger">
-                    <div class="team-img-wrapper">
-                        <img src="https://ui-avatars.com/api/?name=Do%C5%82%C4%85cz+do+nas&background=CBD5E1&color=fff&size=400" alt="Placeholder" class="team-img">
+                    <div class="team-img-wrapper" style="background: white; display: flex; align-items: center; justify-content: center;">
+                        <img src="logo.png" alt="Dołącz do nas" class="team-img" style="width: 60%; height: auto; object-fit: contain; filter: none;">
                     </div>
                     <div class="team-info">
                         <span class="team-role" style="color: var(--text-muted);">Rekrutacja</span>
@@ -823,7 +823,7 @@
         function handleUserChoice(opt) {
             addMessage(opt.label, 'user'); optionsArea.innerHTML = '';
             if (opt.action === 'booking') {
-                window.location.href = '#rezerwacja';
+                window.location.href = 'index.html#rezerwacja';
                 if(window.innerWidth < 480) toggleAnia();
                 setTimeout(() => { addMessage("Przeniosłam Cię do formularza. Powodzenia! 😊", 'bot'); }, 500);
             } else if (opt.next) { loadScenario(opt.next); }
