--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
 
                 <a href="dietetyk.html" class="team-card glass cursor-trigger">
                     <div class="team-img-wrapper">
-                        <img src="https://ui-avatars.com/api/?name=Dietetyk+Kliniczny&background=10B981&color=fff&size=400" alt="Dietetyk NCNI" class="team-img">
+                        <img src="dietetyk.jpg" alt="Dietetyk NCNI" class="team-img" style="object-position: top;">
                     </div>
                     <div class="team-info">
                         <span class="team-role">Psychodietetyka</span>
@@ -578,7 +578,7 @@
                 
                 <a href="fizjoterapia.html" class="team-card glass cursor-trigger">
                     <div class="team-img-wrapper">
-                        <img src="https://ui-avatars.com/api/?name=Fizjo+NCNI&background=F59E0B&color=fff&size=400" alt="Fizjoterapeuta NCNI" class="team-img">
+                        <img src="fizjoterapeuta.jpg" alt="Fizjoterapeuta NCNI" class="team-img" style="object-position: top;">
                     </div>
                     <div class="team-info">
                         <span class="team-role">Fizjoterapia</span>
@@ -823,7 +823,7 @@
         function handleUserChoice(opt) {
             addMessage(opt.label, 'user'); optionsArea.innerHTML = '';
             if (opt.action === 'booking') {
-                window.location.href = 'index.html#rezerwacja';
+                window.location.href = '#rezerwacja';
                 if(window.innerWidth < 480) toggleAnia();
                 setTimeout(() => { addMessage("Przeniosłam Cię do formularza. Powodzenia! 😊", 'bot'); }, 500);
             } else if (opt.next) { loadScenario(opt.next); }
