--- a/kraszewski.html
+++ b/kraszewski.html
@@ -267,34 +267,57 @@
             <h2>Osiągnięcia i Wyróżnienia</h2>
             <ul>
                 <li>
-                    <strong>2024:</strong> Wyróżnienie dla <strong>TOP 1% naukowców Politechniki Wrocławskiej</strong> – dwuletnie członkostwo w elitarnej <em>Academia Professorum Iuniorum</em>.
+                    <strong>2024:</strong> <a href="https://pwr.edu.pl/uczelnia/aktualnosci/academia-professorum-iuniorum-po-raz-pierwszy-w-pelnym-skladzie-13563.html" target="_blank"><em>Academia Professorum Iuniorum</em></a> po raz pierwszy w pełnym składzie – powołanie do grona wyróżnionych <strong>Wybitnych naukowców Politechniki Wrocławskiej</strong>.
                 </li>
                 <li>
-                    <strong>2023:</strong> Laureat tytułu <strong>"Naukowiec Przyszłości 2023"</strong> podczas <em>Europejskiego Forum Inteligentnego Rozwoju</em>. Prof. Sebastian Kraszewski (WUST, D.Sc. Ph.D. Med.Res.Eng.) został wyróżniony za wykorzystanie metod sztucznej inteligencji w podnoszeniu jakości usług medycznych.
+                    <strong>2023:</strong> Laureat tytułu <a href="https://naukowiecprzyszlosci.pl/laureaci-2023/" target="_blank"><strong>"Naukowiec Przyszłości 2023"</strong></a> podczas <em>Europejskiego Forum Inteligentnego Rozwoju</em>. Prof. Sebastian Kraszewski (WUST, D.Sc. Ph.D. Med.Res.Eng.) został wyróżniony za wykorzystanie metod sztucznej inteligencji w podnoszeniu jakości usług medycznych.
                 </li>
                 <li>
                     <strong>2020:</strong> Nominacja do Jubileuszowej Nagrody <strong>"Zasłużony dla Inteligentnego Rozwoju"</strong> za aplikację metod AI w projektowaniu nowych leków (Centrum Inteligentnego Rozwoju).
                 </li>
                 <li>
-                    <strong>2019:</strong> Laureat <strong>Polskiej Nagrody Inteligentnego Rozwoju</strong> (kategoria: Naukowiec Przyszłości) za projekt INNOSEPT. Wyróżnienie wręczono podczas <em>Europejskiego Forum Inteligentnego Rozwoju - Kongres Projektów Przyszłości w Uniejowie</em>.
+                    <strong>2019:</strong> Laureat <strong>Polskiej Nagrody Inteligentnego Rozwoju</strong> (kategoria: Naukowiec Przyszłości) za projekt INNOSEPT. Wyróżnienie wręczono podczas <a href="https://irforum.pl/edycja-2019/" target="_blank"><em>Europejskiego Forum Inteligentnego Rozwoju - Kongres Projektów Przyszłości w Uniejowie</em></a>.
                 </li>
                 <li>
-                    <strong>2019:</strong> Członek Komisji Ekspertów <strong>Narodowego Centrum Nauki (NCN)</strong> w panelu Life Sciences (ocena wniosków PRELUDIUM, SONATA, MINIATURA).
-                </li>
-                <li>
-                    <strong>2017:</strong> I miejsce w konkursie <strong>"Pokolenie W"</strong> (kategoria Nauka) za projekty zmieniające Wrocław (projekt INNOSEPT). <a href="https://www.youtube.com/results?search_query=Sebastian+Kraszewski+Pokolenie+W" target="_blank" rel="noopener">(Zobacz wystąpienie na YouTube)</a>
+                    <strong>2017:</strong> I miejsce w konkursie <strong>"Pokolenie W"</strong> (kategoria Nauka) za projekty zmieniające Wrocław (projekt INNOSEPT). <a href="https://pwr.edu.pl/uczelnia/aktualnosci/naukowiec-z-pwr-zwyciezca-konkursu-pokolenie-w-10700.html" target="_blank" rel="noopener">(Zobacz artykuł na stronie PWr)</a>
                 </li>
                 <li>
                     <strong>2015-2018:</strong> Stypendium <strong>Ministra Nauki i Szkolnictwa Wyższego</strong> dla Wybitnych Młodych Naukowców.
-                </li>
-                 <li>
-                    <strong>2009-2013:</strong> Członek komitetu naukowego regionalnego centrum obliczeniowego <strong>Mésocentre de Franche-Comté</strong> (Francja).
                 </li>
                 <li>
                     <strong>Od 2013:</strong> Liczne nagrody Rektora i Dziekana Politechniki Wrocławskiej za wybitne osiągnięcia naukowe.
                 </li>
                 <li>
                    Działalność naukowa i publikacje dostępne na profilu: <a href="https://www.researchgate.net/profile/Sebastian-Kraszewski" target="_blank">ResearchGate</a>.
+                </li>
+            </ul>
+        </div>
+
+        <div class="content-block" style="margin-top: 40px; border-top: 1px solid var(--border); padding-top: 40px;">
+            <h3 style="margin-bottom: 20px; font-size: 1.4rem;">Materiały Źródłowe i Media</h3>
+            <p style="color: var(--text-muted); margin-bottom: 20px; font-size: 0.95rem;">
+                Zobacz szczegółowe artykuły i źródła potwierdzające osiągnięcia naukowe:
+            </p>
+            <ul style="list-style: none; padding: 0;">
+                <li style="margin-bottom: 12px;">
+                    <a href="https://pwr.edu.pl/uczelnia/aktualnosci/academia-professorum-iuniorum-po-raz-pierwszy-w-pelnym-skladzie-13563.html" target="_blank" style="color: var(--primary); font-weight: 500; text-decoration: none; display: flex; align-items: center; gap: 8px;">
+                        <span>📄</span> Academia Professorum Iuniorum - Politechnika Wrocławska
+                    </a>
+                </li>
+                <li style="margin-bottom: 12px;">
+                    <a href="https://naukowiecprzyszlosci.pl/laureaci-2023/" target="_blank" style="color: var(--primary); font-weight: 500; text-decoration: none; display: flex; align-items: center; gap: 8px;">
+                        <span>🏆</span> Lista Laureatów "Naukowiec Przyszłości 2023"
+                    </a>
+                </li>
+                <li style="margin-bottom: 12px;">
+                    <a href="https://irforum.pl/edycja-2019/" target="_blank" style="color: var(--primary); font-weight: 500; text-decoration: none; display: flex; align-items: center; gap: 8px;">
+                        <span>🏛️</span> Europejskie Forum Inteligentnego Rozwoju - Edycja 2019
+                    </a>
+                </li>
+                <li style="margin-bottom: 12px;">
+                    <a href="https://pwr.edu.pl/uczelnia/aktualnosci/naukowiec-z-pwr-zwyciezca-konkursu-pokolenie-w-10700.html" target="_blank" style="color: var(--primary); font-weight: 500; text-decoration: none; display: flex; align-items: center; gap: 8px;">
+                        <span>📰</span> Zwycięstwo w konkursie "Pokolenie W" - Aktualności PWr
+                    </a>
                 </li>
             </ul>
         </div>
