--- a/kraszewski.html
+++ b/kraszewski.html
@@ -259,7 +259,7 @@
                 <li>Wsparcie technologiczne w traumatologii (obiektywizacja poziomu stresu).</li>
                 <li>Dobór scenariuszy VR dla pacjentów z nadwrażliwością sensoryczną (ASD/WWO).</li>
                 <li>Mentoring i coaching dla osób neuroróżnorodnych (ADHD/ASD) w środowisku akademickim i biznesowym.</li>
-                <li>Badania B+R nad skutecznością cyfrowych terapeutyków (Digital Therapeutics).</li>
+                <li>Badania B+R nad skutecznością terapii cyfrowych (Digital Therapies) i cyfrowego bliźniaka zdrowia (Digital Health Twin).</li>
             </ul>
         </div>
 
@@ -267,10 +267,10 @@
             <h2>Osiągnięcia i Wyróżnienia</h2>
             <ul>
                 <li>
-                    <strong>2024:</strong> <a href="https://pwr.edu.pl/uczelnia/aktualnosci/academia-professorum-iuniorum-po-raz-pierwszy-w-pelnym-skladzie-13563.html" target="_blank"><em>Academia Professorum Iuniorum</em></a> po raz pierwszy w pełnym składzie – powołanie do grona wyróżnionych <strong>Wybitnych naukowców Politechniki Wrocławskiej</strong>.
+                    <strong>2024:</strong> <a href="https://pwr.edu.pl/uczelnia/aktualnosci/academia-professorum-iuniorum-po-raz-pierwszy-w-pelnym-skladzie-13563.html" target="_blank"><em>Academia Professorum Iuniorum</em></a> – powołanie do grupy doradczej JM. Rektora złożonej z wybitnych naukowców Politechniki Wrocławskiej.
                 </li>
                 <li>
-                    <strong>2023:</strong> Laureat tytułu <a href="https://naukowiecprzyszlosci.pl/laureaci-2023/" target="_blank"><strong>"Naukowiec Przyszłości 2023"</strong></a> podczas <em>Europejskiego Forum Inteligentnego Rozwoju</em>. Prof. Sebastian Kraszewski (WUST, D.Sc. Ph.D. Med.Res.Eng.) został wyróżniony za wykorzystanie metod sztucznej inteligencji w podnoszeniu jakości usług medycznych.
+                    <strong>2023:</strong> Laureat tytułu <a href="https://naukowiecprzyszlosci.pl/laureaci-2023/" target="_blank"><strong>"Naukowiec Przyszłości 2023"</strong></a> podczas <em>Europejskiego Forum Inteligentnego Rozwoju</em>. <a href="https://irforum.pl/speaker/dr-inz-sebastian-kraszewski/" target="_blank">Prof. Sebastian Kraszewski (WUST, D.Sc. Ph.D. Med.Res.Eng.)</a> został wyróżniony za wykorzystanie metod sztucznej inteligencji w podnoszeniu jakości usług medycznych.
                 </li>
                 <li>
                     <strong>2020:</strong> Nominacja do Jubileuszowej Nagrody <strong>"Zasłużony dla Inteligentnego Rozwoju"</strong> za aplikację metod AI w projektowaniu nowych leków (Centrum Inteligentnego Rozwoju).
@@ -288,7 +288,7 @@
                     <strong>Od 2013:</strong> Liczne nagrody Rektora i Dziekana Politechniki Wrocławskiej za wybitne osiągnięcia naukowe.
                 </li>
                 <li>
-                   Działalność naukowa i publikacje dostępne na profilu: <a href="https://www.researchgate.net/profile/Sebastian-Kraszewski" target="_blank">ResearchGate</a>.
+                   Działalność naukowa: <a href="https://www.researchgate.net/lab/MEDPH-Laboratory-Molecular-Events-Design-of-Pharmaceuticals-Sebastian-Kraszewski" target="_blank">Laboratorium MEDPH (ResearchGate)</a>.
                 </li>
             </ul>
         </div>
@@ -310,6 +310,11 @@
                     </a>
                 </li>
                 <li style="margin-bottom: 12px;">
+                    <a href="https://irforum.pl/speaker/dr-inz-sebastian-kraszewski/" target="_blank" style="color: var(--primary); font-weight: 500; text-decoration: none; display: flex; align-items: center; gap: 8px;">
+                        <span>🎤</span> Profil Prelegenta - Dr inż. Sebastian Kraszewski (IRForum)
+                    </a>
+                </li>
+                <li style="margin-bottom: 12px;">
                     <a href="https://irforum.pl/edycja-2019/" target="_blank" style="color: var(--primary); font-weight: 500; text-decoration: none; display: flex; align-items: center; gap: 8px;">
                         <span>🏛️</span> Europejskie Forum Inteligentnego Rozwoju - Edycja 2019
                     </a>
@@ -319,9 +324,31 @@
                         <span>📰</span> Zwycięstwo w konkursie "Pokolenie W" - Aktualności PWr
                     </a>
                 </li>
+                <li style="margin-bottom: 12px;">
+                    <a href="https://www.researchgate.net/lab/MEDPH-Laboratory-Molecular-Events-Design-of-Pharmaceuticals-Sebastian-Kraszewski" target="_blank" style="color: var(--primary); font-weight: 500; text-decoration: none; display: flex; align-items: center; gap: 8px;">
+                        <span>🔬</span> Laboratorium MEDPH - Profil ResearchGate
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
+
+    <!-- ZMIANA: Zastąpienie formularza przyciskami kontaktu (analogicznie do index.html) -->
+    <section id="rezerwacja" class="reservation-section" style="text-align: center; margin-bottom: 60px;">
+        <h2 style="margin-bottom: 24px; color: var(--primary-dark);">Umów Konsultację</h2>
+        <p style="color: var(--text-muted); margin-bottom: 40px; font-size: 1.1rem;">
+            Skontaktuj się bezpośrednio, aby umówić wizytę u Dyrektora Naukowego.
+        </p>
+        
+        <div style="display: flex; flex-direction: column; gap: 20px; max-width: 400px; margin: 0 auto;">
+            <a href="tel:+48600608333" class="nav-cta" style="font-size: 1.2rem; padding: 16px 32px; display: flex; align-items: center; justify-content: center; gap: 12px; background: var(--primary); color: white; text-decoration: none; border-radius: 12px; font-weight: 600;">
+                <span>📞</span> Zadzwoń: 600 608 333
+            </a>
+            <a href="mailto:kontakt@ncni.pl" style="font-size: 1.2rem; padding: 16px 32px; display: flex; align-items: center; justify-content: center; gap: 12px; border: 2px solid var(--border); color: var(--text-main); text-decoration: none; border-radius: 12px; font-weight: 600; background: white; transition: 0.2s;" onmouseover="this.style.borderColor='var(--primary)'" onmouseout="this.style.borderColor='var(--border)'">
+                <span>✉️</span> Napisz: kontakt@ncni.pl
+            </a>
+        </div>
+    </section>
 
     <footer>
         <div class="container" style="text-align: center; color: var(--text-muted);">
